--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </li>
         </ul>
         <div class="btn-group">
-          <a class="btn-windows miao-btn solid lg" href="#">
+          <a class="btn-windows miao-btn solid lg" href="download.html?file=">
             <i class="fab fa-windows"></i> 立即下载安装 </a>
         </div>
       </div>
