--- a/download.html
+++ b/download.html
@@ -5,7 +5,7 @@
   <title>正在跳转下载...</title>
   <!-- 51.LA 统计脚本（你自己从51后台获取替换下面这段） -->
    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-<script>LA.init({id:"3M1HI1SMxJPnAOLW",ck:"3M1HI1SMxJPnAOLW"})</script>
+<script>LA.init({id:"3M4ZV2hwj9Frdcpo",ck:"3M4ZV2hwj9Frdcpo"})</script>
 </head>
 <body>
   <h2 style="text-align:center;">正在为您准备下载，请稍候...</h2>
