--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </li>
         </ul>
         <div class="btn-group">
-          <a class="btn-windows miao-btn solid lg" href="download.html?file=https://pub-04959d9029f340cfbb0f6849c1b75e7d.r2.dev/Lssvp_sept183.rar">
+          <a class="btn-windows miao-btn solid lg" href="#">
             <i class="fab fa-windows"></i> 立即下载安装 </a>
         </div>
       </div>
